@@ -114,7 +114,7 @@ Example:
 @end lisp
 @end deffn
 
-@deffn {Scheme Procedure} channel-get-stream channel
+@deffn {Scheme Procedure} channel-stream channel
 Get current stream name from @var{channel}.  The @var{channel} must be open.
 Throw @code{guile-ssh-error} on error.  Return one of the following symbols:
 @code{stdout}, @code{stderr}.
@@ -127,7 +127,7 @@ Example:
 @end lisp
 @end deffn
 
-@deffn {Scheme Procedure} channel-get-session channel
+@deffn {Scheme Procedure} channel-session channel
 Get the session to which belongs the @var{channel}.  Throw
 @code{guile-ssh-error} on an error.  Return the session.
 @end deffn
